--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,23 +30,27 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, my name is Ryuto Ikeuchi"
+					tagline="I am a Full Stack Developer who is currently based in Portland, Oregon."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" />Frontend Developer</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" />Backend Developer</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" />Mobile Developer</Pill>
+					</div>
+					<div class="roles">
+						<Pill><Icon icon="pencil-line" size="1.33em" />AI Developer</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" />Iot Developer</Pill>
 					</div>
 				</Hero>
 
-				<img
+				<!-- <img
 					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
 					width="480"
 					height="620"
 					src="/assets/portrait.jpg"
-				/>
+				/> -->
 			</header>
 
 			<Skills />
