--- a/src/components/HeaderNav.astro
+++ b/src/components/HeaderNav.astro
@@ -2,17 +2,15 @@
 import Icon from './Icon.astro';
 import ThemeToggle from './ThemeToggle.astro';
 import type { iconPaths } from './IconPaths';
-import TerminalWindow from '../icons/TerminalWindow.astro';
 
 
-/** Main menu items */
-const textLinks: { label: string; href: string }[] = [
+const pageLinkList: { label: string; href: string }[] = [
 	{ label: 'Home', href: '/' },
 	{ label: 'Work', href: '/work/' },
 	{ label: 'About', href: '/about/' },
 ];
 
-const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, isStroke: boolean }[] = [
+const externalLinkList: { label: string; href: string; icon: keyof typeof iconPaths, isStroke: boolean }[] = [
 	{ label: 'Twitter', href: 'https://twitter.com/jokyo_engineer', icon: 'twitter', isStroke: true},
 	{ label: 'Qiita', href: 'https://qiita.com/flutter_daisuki', icon: 'qiita', isStroke: false },
 	{ label: 'GitHub', href: 'https://github.com/RyutoIkeuchi', icon: 'github', isStroke: true },
@@ -22,9 +20,9 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 ---
 
 <nav>
-	<div class="menu-header">
+	<div class="header-left">
 		<a href="/" class="site-title">
-			<TerminalWindow color="var(--accent-regular)"/>
+			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
 			Ryuto Ikeuchi
 		</a>
 		<menu-button>
@@ -36,10 +34,10 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			</template>
 		</menu-button>
 	</div>
-	<div id="menu-content">
-		<ul class="nav-items">
+	<div id="header-menu-container">
+		<ul class="page-link-list">
 			{
-				textLinks.map(({ label, href }) => (
+				pageLinkList.map(({ label, href }) => (
 					<li>
 						<a
 							aria-current={Astro.url.pathname === href}
@@ -59,12 +57,12 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 				))
 			}
 		</ul>
-		<div class="menu-footer">
-			<div class="socials">
+		<div class="header-right">
+			<div class="external-link-list">
 				{
-					iconLinks.map(({ href, icon, label, isStroke }) => {
+					externalLinkList.map(({ href, icon, label, isStroke }) => {
 						return (
-							<a href={href} class="social">
+							<a href={href} class="external-link" target="_blank">
 								<span class="sr-only">{label}</span>
 								<Icon icon={icon} isViewBox isStroke={isStroke} />
 							</a>
@@ -85,24 +83,19 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		constructor() {
 			super();
 
-			// Inject menu toggle button when JS runs.
 			this.appendChild(this.querySelector('template')!.content.cloneNode(true));
 			const btn = this.querySelector('button')!;
 
-			// Hide menu (shown by default to support no-JS browsers).
-			const menu = document.getElementById('menu-content')!;
+			const menu = document.getElementById('header-menu-container')!;
 			menu.hidden = true;
 
-			/** Set whether the menu is currently expanded or collapsed. */
 			const setExpanded = (expand: boolean) => {
 				btn.setAttribute('aria-expanded', expand ? 'true' : 'false');
 				menu.hidden = !expand;
 			};
 
-			// Toggle menu visibility when the menu button is clicked.
 			btn.addEventListener('click', () => setExpanded(menu.hidden));
 
-			// Hide menu button for large screens.
 			const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
 				setExpanded(e.matches);
 				btn.hidden = e.matches;
@@ -124,7 +117,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		margin-bottom: 3.5rem;
 	}
 
-	.menu-header {
+	.header-left {
 		display: flex;
 		justify-content: space-between;
 		gap: 0.5rem;
@@ -171,13 +164,13 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		z-index: -1;
 	}
 
-	#menu-content {
+	#header-menu-container {
 		position: absolute;
 		left: 0;
 		right: 0;
 	}
 
-	.nav-items {
+	.page-link-list {
 		margin: 0;
 		display: flex;
 		flex-direction: column;
@@ -200,7 +193,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		color: var(--gray-0);
 	}
 
-	.menu-footer {
+	.header-right {
 		--icon-size: var(--text-xl);
 		--icon-padding: 0.5rem;
 
@@ -213,14 +206,14 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		box-shadow: var(--shadow-lg);
 	}
 
-	.socials {
+	.external-link-list {
 		display: flex;
 		flex-wrap: wrap;
 		gap: 0.625rem;
 		font-size: var(--icon-size);
 	}
 
-	.social {
+	.external-link {
 		display: flex;
 		padding: var(--icon-padding);
 		text-decoration: none;
@@ -228,8 +221,8 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 		transition: color var(--theme-transition);
 	}
 
-	.social:hover,
-	.social:focus {
+	.external-link:hover,
+	.external-link:focus {
 		color: var(--accent-text-over);
 	}
 
@@ -248,7 +241,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			gap: 1rem;
 		}
 
-		.menu-header {
+		.header-left {
 			padding: 0;
 		}
 
@@ -256,11 +249,11 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			font-size: var(--text-lg);
 		}
 
-		#menu-content {
+		#header-menu-container {
 			display: contents;
 		}
 
-		.nav-items {
+		.page-link-list {
 			position: relative;
 			flex-direction: row;
 			font-size: var(--text-sm);
@@ -271,7 +264,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			box-shadow: var(--shadow-md);
 		}
 
-		.nav-items::before {
+		.page-link-list::before {
 			position: absolute;
 			inset: -1px;
 			content: '';
@@ -297,7 +290,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			background-color: var(--accent-regular);
 		}
 
-		.menu-footer {
+		.header-right {
 			--icon-padding: 0.375rem;
 
 			justify-self: flex-end;
@@ -307,13 +300,13 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths, is
 			box-shadow: none;
 		}
 
-		.socials {
+		.external-link-list {
 			display: none;
 		}
 	}
 
 	@media (min-width: 60em) {
-		.socials {
+		.external-link-list {
 			display: flex;
 			justify-content: flex-end;
 			gap: 0;
